create factory environments

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ REDDIT_CLIENT_ID=
 REDDIT_CLIENT_SECRET=
 DISCORD_BOT_ADVANCED_COMMANDS_ROLES=Admins
 DISCORD_BOT_NORMAL_COMMANDS_ROLES=
+ENVIRONMENT=development
 LOGFILENAME=bot
